--- a/Notebooks/Pandas_01_Data_import.ipynb
+++ b/Notebooks/Pandas_01_Data_import.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "13820b91",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "ace7a146",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "0318eb99",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "5           3450.0  female  2007  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "e73eb247",
    "metadata": {},
    "outputs": [
@@ -656,6 +656,166 @@
     "else:\n",
     "    print(f\"Error: {e}. check if 'rowid' exists in CSV\")\n",
     "    print(\"files in ../Datasets:\", os.listdir(\"../datasets\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511fdd92",
+   "metadata": {},
+   "source": [
+    "# Process Large CSV files in chunks: it can be too big to fit in memory at once so processing them in similar samller chunks helps:\n",
+    "1. Avoid memory errors\n",
+    "2. Allow streaming and incremental processing\n",
+    "3. let us focus on most important parts only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "cfa87b90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk shape: (100, 9)\n",
+      "Species counts in chunk:\n",
+      " species\n",
+      "Adelie    100\n",
+      "Name: count, dtype: int64\n",
+      "Chunk shape: (100, 9)\n",
+      "Species counts in chunk:\n",
+      " species\n",
+      "Adelie    52\n",
+      "Gentoo    48\n",
+      "Name: count, dtype: int64\n",
+      "Chunk shape: (100, 9)\n",
+      "Species counts in chunk:\n",
+      " species\n",
+      "Gentoo       76\n",
+      "Chinstrap    24\n",
+      "Name: count, dtype: int64\n",
+      "Chunk shape: (44, 9)\n",
+      "Species counts in chunk:\n",
+      " species\n",
+      "Chinstrap    44\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Path to the CSV (e.g., Palmer Penguins dataset)\n",
+    "data_path = '..\\Datasets\\penguins.csv'\n",
+    "\n",
+    "# Set chunk size (100 rows per chunk; adjust for larger files)\n",
+    "chunk_size = 100\n",
+    "\n",
+    "# Create a generator to read the CSV in chunks, avoiding loading the full file into memory\n",
+    "penguins_chunk_reader = pd.read_csv(data_path, chunksize=chunk_size)\n",
+    "\n",
+    "# Loop through each chunk (each chunk is a DataFrame)\n",
+    "for penguins_chunk in penguins_chunk_reader:\n",
+    "    # Inspect chunk size\n",
+    "    print(f\"Chunk shape: {penguins_chunk.shape}\")\n",
+    "    # Example: Count rows per species in this chunk\n",
+    "    species_counts = penguins_chunk['species'].value_counts()\n",
+    "    print(\"Species counts in chunk:\\n\", species_counts)\n",
+    "\n",
+    "# Note: For a small dataset (~344 rows), chunking is overkill, but this scales to millions of rows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0815e5d6",
+   "metadata": {},
+   "source": [
+    "When we read with chunksize, pandas does not load the whole dataset into memory as one DataFrame. Instead, it loads DataFrames chunk by chunk. So in a sense, we're still working with DataFrames, just smaller ones, processing them sequentially so memory usage stays manageable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae9bf4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     species  body_mass_g\n",
+      "0     Adelie  3692.174145\n",
+      "1  Chinstrap  3723.674242\n",
+      "2     Gentoo  5068.333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: To calculate the average body_mass_g for each species but the file is too big too load at once. \n",
+    "import pandas as pd\n",
+    "\n",
+    "# Path to your large CSV\n",
+    "data_path=\"../Datasets/penguins.csv\"\n",
+    "# Set chunk size (e.g., 100 rows per chunk)\n",
+    "chunk_size = 100\n",
+    "\n",
+    "# Create a chunk reader (returns a generator)\n",
+    "penguins_chunk_reader = pd.read_csv(data_path, chunksize=chunk_size)\n",
+    "\n",
+    "# Initialize a list to store results from each chunk\n",
+    "species_means = []\n",
+    "\n",
+    "# Iterate over chunks\n",
+    "for chunk in penguins_chunk_reader:\n",
+    "    # Process chunk: Compute mean body_mass_g per species\n",
+    "    chunk_mean = chunk.groupby('species')['body_mass_g'].mean().reset_index()\n",
+    "    species_means.append(chunk_mean)\n",
+    "\n",
+    "# Combine results from all chunks\n",
+    "final_result = pd.concat(species_means).groupby('species')['body_mass_g'].mean().reset_index()\n",
+    "print(final_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf7051eb",
+   "metadata": {},
+   "source": [
+    "pick a reasonable chunk_size(10,000-100,000) that keeps memory usage under 1 GB. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "88545316",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtered CSV saved!:\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtering and saving:\n",
+    "import pandas as pd\n",
+    "chunk_size=100\n",
+    "data_path=\"../Datasets/penguins.csv\"\n",
+    "penguins_chunk_reader=pd.read_csv(data_path, chunksize=chunk_size)\n",
+    "\n",
+    "# header to new CSV once.\n",
+    "header_written=False\n",
+    "for chunk in penguins_chunk_reader:\n",
+    "    filtered_chunk=chunk[chunk[\"body_mass_g\"]>4000]\n",
+    "\n",
+    "    # save to csv  (append mode after first chunk)\n",
+    "    filtered_chunk.to_csv(\"../Datasets/filtered_penguins.csv\", mode=\"a\", header= not header_written, index=\"True\",index_label=\"rowid\")\n",
+    "    header_written=True\n",
+    "print(\"filtered CSV saved!:\")\n"
    ]
   }
  ],
