--- a/Notebooks/Pandas_02_Data_structure.ipynb
+++ b/Notebooks/Pandas_02_Data_structure.ipynb
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "id": "1f1ee79c",
    "metadata": {},
    "outputs": [
@@ -2068,9 +2068,373 @@
    ],
    "source": [
     "# update specific rows and columns\n",
+    "# Update 'sex' column where the value is missing (NaN) to 'Male'\n",
     "penguins_data.loc[penguins_data[\"sex\"].isnull(),\"sex\"]=\"Male\"\n",
     "penguins_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "id": "472879cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>4250.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>4450.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>340</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>55.8</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>341</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>342</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>49.6</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3775.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>343</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>50.8</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>4100.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>344</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>50.2</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>4775.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>344 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rowid    species     island  bill_length_mm  bill_depth_mm  \\\n",
+       "0        1     Adelie  Torgersen            39.1           18.7   \n",
+       "1        2     Adelie  Torgersen            39.5           17.4   \n",
+       "2        3     Adelie  Torgersen            40.3           18.0   \n",
+       "3        4     Adelie  Torgersen             NaN            NaN   \n",
+       "4        5     Adelie  Torgersen            36.7           19.3   \n",
+       "..     ...        ...        ...             ...            ...   \n",
+       "339    340  Chinstrap      Dream            55.8           19.8   \n",
+       "340    341  Chinstrap      Dream            43.5           18.1   \n",
+       "341    342  Chinstrap      Dream            49.6           18.2   \n",
+       "342    343  Chinstrap      Dream            50.8           19.0   \n",
+       "343    344  Chinstrap      Dream            50.2           18.7   \n",
+       "\n",
+       "     flipper_length_mm  body_mass_g     sex  year  \n",
+       "0                181.0       3750.0    male  2007  \n",
+       "1                186.0       4800.0  female  2007  \n",
+       "2                195.0       4250.0  female  2007  \n",
+       "3                  NaN          NaN    Male  2007  \n",
+       "4                193.0       4450.0  female  2007  \n",
+       "..                 ...          ...     ...   ...  \n",
+       "339              207.0       4000.0    male  2009  \n",
+       "340              202.0       4400.0  female  2009  \n",
+       "341              193.0       3775.0    male  2009  \n",
+       "342              210.0       4100.0    male  2009  \n",
+       "343              198.0       4775.0  female  2009  \n",
+       "\n",
+       "[344 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add 100g to body_mass_g for female penguins\n",
+    "penguins_data.loc[penguins_data[\"sex\"]==\"female\",\"body_mass_g\"]+=1000\n",
+    "penguins_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66730434",
+   "metadata": {},
+   "source": [
+    "# **Takeaway**: With `loc`, We can select and modify data using intuitive labels and conditions.\n",
+    "Core Uses:\n",
+    "\n",
+    "1. Select rows: df.loc[0] or df.loc[df['species'] == 'Gentoo'].\n",
+    "2. Select columns: df.loc[:, 'body_mass_g'] or df.loc[:, ['species', 'body_mass_g']].\n",
+    "3. Modify data: df.loc[condition, 'column'] = new_value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b149b30",
+   "metadata": {},
+   "source": [
+    "# **Access Data with iloc**:  integer -location-based-indexing method in Pandas.\n",
+    "It lets us selects row and columns from a DataFrame using numerical index.  loc is about meaningful names and conditions, iloc is about raw positions (\"give me first row and third column). Like navigating spreasheet by countingrows and columns starting from zero.\n",
+    "<br>\n",
+    "\n",
+    "1. keyidea: iloc uses integer positions (0-based) to access data, ignoring labels or names.\n",
+    "2. Syntax: df.iloc[row_selection, column_selection]\n",
+    "<br>\n",
+    "\n",
+    "iloc is perfect when we need to access data by position, especiallty when labels are complex, missing and irrelevant or when we are iterating over a DataFrame. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "id": "a23e8e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    3\n",
+       "3    4\n",
+       "4    5\n",
+       "Name: rowid, dtype: int64"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "penguins_data=pd.read_csv(\"..\\Datasets\\penguins.csv\")\n",
+    "#select the first column. \n",
+    "penguins_data.iloc[:,0].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d2e7d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>181.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>186.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>195.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>193.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rowid  flipper_length_mm\n",
+       "0      1              181.0\n",
+       "1      2              186.0\n",
+       "2      3              195.0\n",
+       "3      4                NaN\n",
+       "4      5              193.0"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# select multiple columns (indices 0 and 5)\n",
+    "penguins_data.iloc[:,[0,5]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2617868b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
